added both Logos

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body link="#FFBF00" vlink="#FFBF00" alink="#FFFFFF">
     <h1>Simple Web Page</h1>
 
-<!--    <img width='400' alt="puppet" src="./images/puppet-logo-tagline-01.jpg"> -->
+    <img width='400' alt="puppet" src="./images/puppet-logo-tagline-01.jpg">
     <img width='400' alt="puppet" src="./images/Puppet-Logo-Amber-White-lg.jpg">
 
     <h2>Useful Links to learn more about Puppet</h2>
