--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <h1>Simple Web Page</h1>
 
     <img width='400' alt="puppet" src="./images/puppet-logo-tagline-01.jpg">
-    <img width='400' alt="puppet" src="./images/Puppet-Logo-Amber-White-lg.jpg">
+<!--   <img width='400' alt="puppet" src="./images/Puppet-Logo-Amber-White-lg.jpg"> -->
 
     <h2>Useful Links to learn more about Puppet</h2>
 
